@@ -39,9 +39,14 @@ public class SteerForCohesion : SteerForNeighbors
 	{
 		// accumulate sum of forces leading us towards neighbor's positions
 		var distance = other.Position - Vehicle.Position;
-		if (distance.sqrMagnitude < _comfortDistanceSquared)
+		var sqrMag = distance.sqrMagnitude;
+		if (sqrMag < _comfortDistanceSquared)
 		{
 			distance = Vector3.zero;
+		}
+		else
+		{
+			distance *= 1 / sqrMag;
 		}
 		return distance;
 	}
